# camera_controlled_swarm_robots

./: .gitmodules  README.md
Presentation/: CameraControlledSwarmRobots.pptx
Software/SvVis_Windows_app_src/: About.Designer.cs  ChooseCOM.cs  Configuration.cs  VisForm3.Designer.cs  VisForm3.resx
Software/fahrzeug_software_bin/: vehicle_software.axf
Software/fahrzeug_software_src/: .gitignore  LED_driver.h  MDDS_Pinning_list.txt  SvVis_cortex.uvguix.admin  SvVis_cortex.uvoptx  SvVis_threads.cpp  USART.cpp  USART.hpp  at_wrapper.cpp  at_wrapper.hpp  main.cpp  motor_driver.cpp  motor_driver.hpp  ring_pipe.cpp  ring_pipe.hpp
Software/position_tracking/opencvcpp/: SwarmDetection.cpp  SwarmDetection.h  main.cpp  opencvcpp.vcxproj  opencvcpp.vcxproj.filters
Software/swarm_control/swarm_control/: CMakeLists.txt  main.cpp  tcptocom.py
Software/visualization/ForwardingProxy/: .gitignore  compile.bat
Software/visualization/PathServer/: .gitignore  compile_client.bat  compile_server.bat  main.cpp  pathgenerator.exe.lnk
Software/visualization/SchwarmGUI/: .gitignore
Software/visualization/VehiclePath/: main.cpp
SvVis/SvVis_PC/: CMakeLists.txt  Packet_handler.hpp  Packet_handler_working.hpp  SvVis_PC.cpp  SvVis_PC.hpp  main.cpp  tcptocom (old old).py  tcptocom (old).py  tcptocom.py
SvVis/SvVis_PC/SvVis_PC/: CMakeLists.txt  CMakeSettings.json  SvVis_PC.cpp  SvVis_PC.hpp
SvVis/cortex_Program/: blockdiagram.graphml
SvVis/cortex_Program_new_svvis/: .gitignore  LED_driver.c  MDDS_Pinning_list.txt  SvVis.cpp  SvVis.hpp  SvVis_cortex.uvoptx  SvVis_cortex.uvprojx  SvVis_threads.cpp  USART.cpp  USART.hpp  WLAN_driver.old.cpp  at_wrapper.cpp  at_wrapper.hpp  extra.cpp  extra.hpp  main.cpp  motor_driver.cpp  motor_driver.hpp  ring_pipe.cpp  ring_pipe.hpp  serial_interface.hpp
SvVis/cortex_Program_new_svvis/Objects/: vehicle_software.axf
SvVis/svvis_WinApp/: ChooseCOM.Designer.cs  MenuColorTable.cs  ProtocolHandler.cs  SelectTCPIP.cs  SvVis3.csproj  ThemeHandler.cs  VisForm3.cs
cortex_Program/: blockdiagram.graphml
documentation/: Camera Controlled Swarm Robots Abstract.docx  Camera Controlled Swarm Robots Kurzfassung.docx  Camera Controlled Swarm Robots.docx  port mapping.xlsx
documentation/Kurzfassung/: Camera Controlled Swarm Robots Abstract.docx  Camera Controlled Swarm Robots Kurzfassung.docx
documentation/Mottl/: Camera Controlled Swarm Robots.docx
documentation/Pruggmayer/: Camera Controlled Swarm Robots.docx  DA Doku Pruggmayer.docx  SW_arch_SvVis_handler.graphml  SW_arch_swarm_control.graphml  Swarm control.graphml
documentation/Reim/: Camera Controlled Swarm Robots.docx
positiontracking/: .gitignore  opencvcpp.sln
positiontracking/opencvcpp/: SwarmDetection.cpp  SwarmDetection.h  main.cpp  opencvcpp.cpp  opencvcpp.vcxproj  opencvcpp.vcxproj.filters
positiontracking/opencvcpp/Debug/: opencvcpp.exe.recipe  vc142.idb
positiontracking/opencvcpp/Release/: opencvcpp.exe.recipe  opencvcpp.iobj  opencvcpp.ipdb
positiontracking/x64/Debug/: opencvcpp.ilk
visualization/EventHandler/: .gitignore
visualization/ForwardingProxy/: main.cpp
visualization/GLconvert/: .gitignore
visualization/GLstring/: .gitignore
visualization/PathServer/: .gitignore
visualization/PathServer/logs/: 2020-11-27_log.txt  2020-12-04_log.txt  2020-12-07_log.txt
visualization/PathServer/pathgenerator/: goals.gol
visualization/SchwarmGUI/: .gitignore  CMakeLists.txt  CMakeSettings.json  compile.bat  main.cpp  makefile  path_server.exe.lnk
visualization/SchwarmGUI/GUI/gui_includes/: gui_base.h  gui_events.h  gui_handler.h  textbox.h
visualization/SchwarmGUI/GUI/gui_source/: gui_handler.cpp
visualization/SchwarmGUI/SchwarmPacket/: otherpacket.cpp  packet.h
visualization/SchwarmGUI/Shaders/: vis.frag  vis.vert
visualization/SchwarmGUI/Vehicle/: vehicle.h
visualization/SchwarmGUI/Vehicle/source/: vehicle_buffer_src.cpp  vehicle_processor_src.cpp
visualization/SchwarmGUI/client/: client.cpp  client.h  my_msh.h
visualization/SchwarmGUI/includes/: Main.h  command.h  my_event.h  my_utility.h  window_hanlder.h
visualization/SchwarmGUI/pathserver/: pathgenerator.exe.lnk  start.bat
visualization/SchwarmGUI/pathserver/logs/: 2021-03-31_log.txt  2021-04-01_log.txt  2021-04-02_log.txt
visualization/SchwarmGUI/pathserver/pathgenerator/: goals.gol
visualization/SchwarmGUI/pathserver/pathgenerator/logs/: 2021-03-20_log.txt  2021-04-01_log.txt  2021-04-02_log.txt
visualization/Shaderlib/: .gitignore
visualization/SocketHandler/: .gitignore
visualization/VehiclePath/: .gitignore  compile.bat  output.txt  path.h
visualization/VehiclePath/logs/: 2020-11-27_log.txt  2020-12-14_log.txt
(+53 files in other folders)
