# CMakeList.txt : CMake project for SvVis_PC, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("SvVis_PC")

# Add source to this project's executable.
add_executable (SvVis_PC "SvVis_PC.cpp" "SvVis_PC.hpp")

# TODO: Add tests and install targets if needed.
